# Sea-Battle

./: Makefile  README.md  pyproject.toml
.github/workflows/: python-ci.yml
sea_battle/: __init__.py  engine.py  exceptions.py  field.py  render.py  renders.py  ship.py
sea_battle/scripts/: sea_battle.py
